--- a/style.css
+++ b/style.css
@@ -1,63 +1,89 @@
 html, body {
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: row;
+}
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .side-menu {
     height: 100vh;
-    width: 10rem;
-    background: rgba(0, 0, 0, 0.2);
+    width: 4em;
     display: flex;
     flex-direction: column;
-    transition: width 1s;
-    overflow: hidden;
-}
-
-.show-menu {
-    width: 4rem;
-    overflow: hidden;
+    position: relative;
 }
 
 .side-menu #hidden-menu-icon {
-    font-size: 40px;
+    font-size: 35px;
     cursor: pointer;
-    padding: 0.5rem;
+    padding: 1rem;
+}
+
+.side-menu #menu-items{
+    background-color: rgba(0, 0, 0, .2);
+    backdrop-filter: blur(5px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 15rem;
+    height: 100%;
+    z-index: 100;
+    overflow: hidden;
+    transition: width 1s;
+}
+
+.side-menu.show-menu #menu-items {
+    width: 100%;
 }
 
 .side-menu ul {
     margin-top: 4rem;
-    padding: 0.5rem;
-    margin-left: 0.5rem;
+    padding: 0;
+    width: 15rem;
 }
 
 .side-menu ul li {
+    width: 100%;
     list-style: none;
-    margin-bottom: 3rem;
     font-size: 20px;
 }
 
 .side-menu ul li a {
+    display: block;
+    padding: 1rem 1rem;
     text-decoration: none;
     color: black;
 }
 
-.side-menu #github {
+.side-menu ul li a:hover {
+    background: rgba(255, 255, 255, .3);
+}
+
+
+.side-menu .socials i {
     font-size: 30px;
+    margin-right: 2rem;
+    width: 1.5ex;
+}
+
+.headline h1, h3{
+    display: inline;
+}
+
+.headline h1 {
     margin-right: 2rem;
 }
 
-.side-menu .github-account {
-    display: flex;
-    flex-direction: row;
+.headline {
+    height: 5rem;
+    width: 70vw;
+    margin: 3rem 4rem;
+    border-bottom: 1px solid black;
 }
 
-.side-menu .contact {
-    display: flex;
-    flex-direction: row;
-   
-}
 
-.side-menu #email {
-    margin-right: 2rem;
-    font-size: 30px;
-}
+
