--- a/style.css
+++ b/style.css
@@ -4,22 +4,19 @@ html, body {
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    display: flex;
-}
-
-.container {
-    display: flex;
-    flex-direction: row;
+	font-family: 'Source Sans Pro', sans-serif;
+	color: #182532;
 }
 
 .side-menu {
-    min-height: 100vh;
-    width: 3em;
     display: flex;
     flex-direction: column;
-    position: relative;
-    flex-shrink: 0;
+	flex-shrink: 0;
+	min-height: 100vh;
+    width: 3em;
+    position: fixed;
+	top: 0;
+	left: 0;
 }
 
 .side-menu #hidden-menu-icon {
@@ -31,6 +28,7 @@ body {
 
 .side-menu #menu-items{
     background-color: rgba(0, 0, 0, .2);
+	background-image: url(test.png);
     backdrop-filter: blur(5px);
     position: absolute;
     top: 0;
@@ -70,6 +68,9 @@ body {
     background: rgba(255, 255, 255, .3);
 }
 
+h1, h2, h3 {
+	
+}
 
 .side-menu .socials i {
     font-size: 30px;
@@ -77,48 +78,123 @@ body {
     width: 1.5ex;
 }
 
-.headline h1, h3{
-    display: inline;
-}
-
-.headline h1 {
-    margin-right: .5rem;
-    font-size: 40px;
-}
-
-.headline h3 {
-    font-size: 25px;
-}
-
-.headline {
-    height: 5rem;
-    width: 85%;
-    margin: 2rem 1rem;
-    border-bottom: 1px solid black;
-}
-
 .main-content {
-    width: 100%;
-}
-
-.main-content img {
-    border-radius: 100%;
-}
-
-.main-content .image {
-    width: 100%;
-    text-align: center;
+	display: flex;
+	padding: 4em 10rem;
 }
 
 .descriptive-text {
-    margin-left: 1rem;
+	padding: 0 3rem;
 }
 
-.descriptive-text h4 {
-    font-size: 25px;
+.descriptive-text p {
+	padding-left: 0.4rem;
 }
 
-.descriptive-text h5 {
-    font-size: 20px;
+.olivia {
+	margin-bottom: 4rem;
 }
 
+.olivia h1, p {
+	margin: 0;
+}
+
+.olivia h1 {
+	white-space: nowrap;
+}
+
+.olivia h1 .thin {
+	font-weight: 100;
+}
+
+.olivia p {
+}
+
+
+.main-content  h1 {
+    font-size: 5em;
+	font-weight: 700;
+}
+
+.main-content  h2 {
+    font-size: 4.5em;
+	font-weight: 600;
+	margin-bottom: 0;
+}
+
+.main-content .cv {
+	padding: 0 3rem;
+}
+
+.main-content .activity {
+	margin-bottom: 3rem;
+}
+
+.main-content .activity h3 {
+    font-size: 3.5em;
+	font-weight: 600;
+	text-transform: uppercase;
+	margin-bottom: .5rem;
+	padding-left: .2rem;
+}
+
+.main-content .activity p {
+	font-size: 1.1875em;
+	color: #858585;
+}
+
+.main-content img {
+	border-radius: 100%;
+	border: 3px solid transparent;
+	outline: 3px solid transparent;
+	animation: photo-outline 4s linear forwards;
+}
+
+@keyframes photo-outline {
+	60% {
+		outline: 3px solid transparent;	
+	}
+
+	61%, 100% {
+		outline: 3px solid #000;
+	}
+}
+
+.main-content .image {
+	display: inline;
+}
+
+svg {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+}
+
+svg #path {
+	--dashlen: 4000;
+	--dashoffsetafter: -4000;
+	
+	fill: none;
+	stroke: #000;
+	stroke-width: 3px;
+	stroke-dasharray: var(--dashlen);
+	stroke-dashoffset: var(--dashlen);
+	animation: animate-line 4s linear forwards;
+	animation-timing-function: ease-in-out;
+}
+
+@keyframes animate-line {
+	to {
+		stroke-dashoffset: var(--dashoffsetafter);
+	}
+}
+
+@media only screen and (max-width: 1050px)  {
+	.main-content  h2 {
+		font-size: 6.85vw;
+		font-weight: 600;
+	}
+}
