--- a/style.css
+++ b/style.css
@@ -50,9 +50,9 @@ body {
 
 .side-menu ul {
     margin-top: 4rem;
-    padding: .5rem;
+    padding: 0;
     width: 15rem;
-	margin-left: .6rem;
+	/* margin-left: .6rem; */
 }
 
 .side-menu ul li {
@@ -66,6 +66,7 @@ body {
     margin-bottom: 1rem;
     text-decoration: none;
     color: inherit;
+	padding: 1rem;
 }
 
 .side-menu ul li a:hover {
