--- a/style.css
+++ b/style.css
@@ -234,20 +234,19 @@ svg {
 
 svg #path {
 	--dashlen: 4000;
-	--dashoffsetafter: -4000;
 	
 	fill: none;
 	stroke: #000;
 	stroke-width: 3px;
 	stroke-dasharray: var(--dashlen);
-	stroke-dashoffset: var(--dashlen);
+	stroke-dashoffset: calc(var(--dashlen) * 3);
 	animation: animate-line 4s linear forwards;
 	animation-timing-function: ease-in-out;
 }
 
 @keyframes animate-line {
 	to {
-		stroke-dashoffset: var(--dashoffsetafter);
+		stroke-dashoffset: var(--dashlen);
 	}
 }
 
