--- a/style.css
+++ b/style.css
@@ -10,49 +10,163 @@ body {
 }
 
 .side-menu {
-    display: flex;
-    flex-direction: column;
-	flex-shrink: 0;
-	min-height: 100vh;
-    width: 5em;
-    position: sticky;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+    position: fixed;
 	top: 0;
 	left: 0;
-	float: left;
-}
-
-.side-menu #hidden-menu-icon {
-    font-size: 40px;
-    cursor: pointer;
-    padding: .5rem;
-    margin-top: 1rem;
-	margin-left: 0.6rem;
-}
-
-.side-menu #menu-items{
+    width: 5rem;
+	height: 100vh;
     background-color: rgba(0, 0, 0, .7);
-	/* background-image: url(test.png); */
-    backdrop-filter: blur(5px);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 15rem;
-    bottom: 0;
-    z-index: 100;
-    overflow: hidden;
-    transition: width 1s;
+    backdrop-filter: blur(7px);
 	color: rgba(255, 255, 255, .7);
+	overflow: hidden;
+    transition: width 1s;
 }
 
-.side-menu.show-menu #menu-items {
+.side-menu.show-menu {
+    width: 15rem;
+}
+
+.side-menu.show-contact {
     width: 100%;
+}
+
+.side-menu a {
+	text-decoration: none;
+    color: inherit;
+}
+
+.side-menu #menu-toggle {
+	display: flex;
+	justify-content: flex-end;
+    padding: 1rem 0;
+    font-size: 40px;
+}
+
+.side-menu #menu-toggle .menu-toggle-icon {
+	width: 5rem;
+	text-align: center;
+}
+
+.side-menu #menu-content {
+	display: flex;
+	flex-direction: row-reverse;
+	justify-content: flex-end;
+	width: 100%;
+}
+
+.side-menu .contact-form {
+	width: 100%;
+	display: flex;
+	opacity: 0;
+	flex-grow: 0;
+	flex-shrink: 1;
+	flex-basis: 0;
+    align-items: center;
+    justify-content: center;
+	overflow: hidden;
+	transition: opacity 1s;
+}
+
+.side-menu.show-contact .contact-form {
+	opacity: 1;
+	flex-grow: 1;
+	flex-basis: auto;
+}
+
+.side-menu.show-menu .contact-form {
+	flex-grow: 0;
+	flex-basis: 0;
+}
+
+.side-menu .contact-form form {
+	width: 500px;
+    flex-direction: column;
+    display: flex;
+    color: white;
+	overflow: hidden;
+	transition: width 1s linear;
+}
+
+.side-menu.show-contact .contact-form form {
+	width: 500px;
+}
+
+.side-menu .contact-form form label {
+    font-size: 20px;
+	margin-bottom: 1rem;
+}
+.side-menu .contact-form form input:focus, .side-menu .contact-form form textarea:focus {
+	outline: none;
+}
+
+.side-menu .contact-form form input:-webkit-autofill,
+.side-menu .contact-form form input:-webkit-autofill:hover,
+.side-menu .contact-form form input:-webkit-autofill:focus,
+.side-menu .contact-form form textarea:-webkit-autofill,
+.side-menu .contact-form form textarea:-webkit-autofill:hover,
+.side-menu .contact-form form textarea:-webkit-autofill:focus
+{
+  -webkit-box-shadow: none;
+}
+
+.side-menu .contact-form form input {
+    margin: 1rem 0;
+    background: transparent;
+    color: #fff;
+    border: none;
+    border-bottom: 1.5px solid rgba(255, 255, 255, 0.5);
+    font-size: 110%;
+}
+
+.side-menu .contact-form form input[type=submit]:hover {
+    background-color: rgba(255, 255, 255, .4);
+    background: linear-gradient(90deg, rgba(255, 255, 255, .3) 0%, rgba(255, 255, 255, .5) 50%, rgba(255, 255, 255, .3) 100%);
+}
+
+.side-menu .contact-form form textarea {
+    margin-bottom: 1rem;
+    color: #fff;
+	border: none;
+    background-color: rgba(255, 255, 255, .2);
+	resize:none;
+}
+
+.side-menu .contact-form form input[type=submit] {
+    margin: 0;
+    color: #fff;
+    background-color: rgba(255, 255, 255, .3);
+    border: none;
+    border-radius: 4px;
+    padding: 1rem;
+    font-weight: 700;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.side-menu .menu-items {
+	flex-grow: 1;
+	display: flex;
+	justify-content: flex-end;
+}
+
+.side-menu .menu-items .socials {
+	width: 5rem;
+	overflow: hidden;
+	transition: width 0s linear 1s;
+}
+
+.side-menu.show-menu .menu-items .socials {
+    width: 100%;
+	transition: none;
+
 }
 
 .side-menu ul {
     margin-top: 4rem;
     padding: 0;
-    width: 15rem;
-	/* margin-left: .6rem; */
 }
 
 .side-menu ul li {
@@ -62,11 +176,9 @@ body {
 }
 
 .side-menu ul li a {
-    display: block;
-    margin-bottom: 1rem;
-    text-decoration: none;
-    color: inherit;
-	padding: 1rem;
+    display: flex;
+	align-items: center;
+	padding: 1rem 0;
 }
 
 .side-menu ul li a:hover {
@@ -74,31 +186,20 @@ body {
 }
 
 .side-menu .socials i {
+	flex-shrink: 0;
     font-size: 35px;
-    margin-right: 2rem;
-    width: 1.5ex;
+    width: 5rem;
+	text-align: center;
 }
 
 .main-content {
-	/*
-	display: grid;
-	grid-template-columns: repeat(12, 1fr);
-	*/
+	margin-left: 5rem;
 	display: flex;
 	padding: 4em 6rem;
 }
 
 .photo {
-	/*
-	grid-column: 1 / 3;
-	*/
 	padding-right: 2rem;
-}
-
-.descriptive-text {
-	/*
-	grid-column: 3 / 12;
-	*/
 }
 
 .main-content  h1 {
@@ -153,12 +254,6 @@ body {
 	animation: photo-outline 4s linear forwards;
 }
 
-.descriptive-text {
-	/*
-	padding: 0 3rem;
-	*/
-}
-
 .descriptive-text p {
 	padding-left: 0.4rem;
 }
@@ -207,11 +302,6 @@ body {
 	color: lightgreen;
 	margin-left: 1rem;
 }
-
-/* table {
-	border-spacing: 5px;
-	font-size: 18px;
-} */
 
 @keyframes photo-outline {
 	60% {
@@ -287,51 +377,55 @@ svg #path {
 }
 
 @media screen and (max-width: 768px) {
-	.photo {
-		/*
-		grid-column: 1 / 12;
-		margin: auto;
-		*/
-	}
-
-	.main-content {
-		/*
-		padding: 0;
-		grid-column: 1 / 12;
-		margin: 1rem 3rem;
-		margin-left: 2.5rem;
-		*/
-	}
-
 	.main-content .cv, .education {
 		padding: 0;
-	}
-
-	.descriptive-text {
-		/*
-		grid-column: 1 / 12;
-		*/
-	}
-	
+	}	
 }
 
 @media only screen and (max-width: 576px)  {
 	.side-menu {
-		top: auto;
+		top: unset;
 		bottom: 0;
-		min-width: 100%;
+		width: 100%;
+		height: 5rem;
 		flex-direction: row;
-		position: fixed;
-		min-height: unset;
+		align-items: flex-start;
+		transition: height 1s;
 	}
 
-	.side-menu #hidden-menu-icon {
-		display:none;
+	.side-menu.show-menu {
+		width: unset;
 	}
 
-	.side-menu #menu-items {
+	.side-menu.show-contact {
+		height: 100%;
+	}
+
+	.side-menu #menu-toggle {
+		display: none;
+	}
+
+	.side-menu #menu-content {
+		flex-direction: column;
+		justify-content: flex-start;
+		height: 100%;
+	}
+
+	.side-menu .menu-items {
 		top: auto;
-		padding: 1rem 0;
+		flex-grow: 0;
+	}
+
+	.side-menu .contact-container {
+		width: 95%
+	}
+
+	.side-menu .contact-form form, .side-menu.show-contact .contact-form form {
+		width: 100%;
+	}
+
+	.side-menu .menu-items .socials{
+		width: 100%;
 	}
 
 	.side-menu ul {
@@ -340,13 +434,22 @@ svg #path {
 		text-align: center;
 	}
 
-	.side-menu ul li, .side-menu ul li a {
+	.side-menu ul li {
 		display: inline;
-		padding: 0.5rem;
+	}
+
+	.side-menu ul li a {
+		display: inline-flex;
+		height: 5rem;
+		padding-top: 0;
+		padding-bottom: 0;
+		vertical-align: middle;
 	}
 
 	.side-menu .socials i {
 		margin: 0;
+			vertical-align: middle;
+
 	}
 
 	.side-menu ul li a .label {
@@ -361,7 +464,6 @@ svg #path {
 	}
 
 	.photo {
-		grid-column: 1 / 12;
 		padding: 2rem 0;
 		margin: auto;
 	}
@@ -372,8 +474,6 @@ svg #path {
 	}
 
 	.descriptive-text {
-		grid-column: 1 / 12;
-		/* margin: auto; */
 		padding: 0;
 		max-width: 100vw;
 		margin: 0 1rem;
@@ -398,7 +498,6 @@ svg #path {
 	}
 
 	.education {
-		/* grid-column: 1 / 12; */
 		padding: 0;
 	}
 
@@ -415,9 +514,4 @@ svg #path {
 	.education p .start-date:before {
 		content: unset;
 	}
-
-	/* table{
-		border-spacing: 10px;
-		font-size: 18px;
-	} */
 }
