--- a/style.css
+++ b/style.css
@@ -514,4 +514,8 @@ svg #path {
 	.education p .start-date:before {
 		content: unset;
 	}
+
+	.side-menu .contact-form form textarea {
+		height: 10rem;
+	}
 }
