--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,3 +1,5 @@
+/* media query rules for different resolutions */
+
 @media only screen and (max-width: 1400px) {
 	.main-content .about-me {
 		width: unset;
