--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -39,6 +39,7 @@
 }
 
 @media only screen and (max-width: 576px)  {
+    /* move the side menu for phones in portrait orientation */
 	.side-menu {
 		top: unset;
 		bottom: 0;
@@ -112,6 +113,7 @@
 		display: none;
 	}
 
+    /* Resize main content */
 	.main-content {
 		max-width: 100vw;
 		margin: auto;
