--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body.modal {
 	height: 100vh;
     background-color: rgba(0, 0, 0, .7);
     backdrop-filter: blur(7px);
+	-webkit-backdrop-filter: blur(7px);
 	color: rgba(255, 255, 255, .7);
 	overflow: hidden;
     transition: width 1s;
