--- a/style.css
+++ b/style.css
@@ -1,112 +1,114 @@
-html, body {
-    margin: 0;
-    padding: 0;
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-	font-family: 'Source Sans Pro', sans-serif;
-	color: #182532;
-	background-color: #fff;
+  font-family: 'Source Sans Pro', sans-serif;
+  color: #182532;
+  background-color: #fff;
 }
 
 body.modal {
-	overflow: hidden;
+  overflow: hidden;
 }
 
 /* side menu that is postitioned left on big devices och postioned at the bottom on smaller devices */
 .side-menu {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
-    position: fixed;
-	top: 0;
-	left: 0;
-    width: 5rem;
-	height: 100vh;
-    background-color: rgba(0, 0, 0, .7);
-    backdrop-filter: blur(7px);
-	-webkit-backdrop-filter: blur(7px);
-	color: rgba(255, 255, 255, .7);
-	overflow: hidden;
-    transition: width 1s;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 5rem;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  color: rgba(255, 255, 255, 0.7);
+  overflow: hidden;
+  transition: width 1s;
 }
 
 .side-menu.show-menu {
-    width: 15rem;
+  width: 15rem;
 }
 
 .side-menu.show-contact {
-    width: 100%;
-	overflow-y: auto;
+  width: 100%;
+  overflow-y: auto;
 }
 
 .side-menu a {
-	text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 /* defines rules for hamburger menu */
 .side-menu #menu-toggle {
-	display: flex;
-	justify-content: flex-end;
-    padding: 1rem 0;
-    font-size: 40px;
+  display: flex;
+  justify-content: flex-end;
+  padding: 1rem 0;
+  font-size: 40px;
 }
 
 .side-menu #menu-toggle .menu-toggle-icon {
-	width: 5rem;
-	text-align: center;
+  width: 5rem;
+  text-align: center;
 }
 
 .side-menu #menu-content {
-	display: flex;
-	flex-direction: row-reverse;
-	justify-content: flex-end;
-	width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+  width: 100%;
 }
 
 .side-menu .contact-form {
-	width: 100%;
-	display: flex;
-	opacity: 0;
-	flex-grow: 0;
-	flex-shrink: 1;
-	flex-basis: 0;
-    align-items: center;
-    justify-content: center;
-	overflow: hidden;
-	transition: opacity 1s;
+  width: 100%;
+  display: flex;
+  opacity: 0;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: 0;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  transition: opacity 1s;
 }
 
 .side-menu.show-contact .contact-form {
-	opacity: 1;
-	flex-grow: 1;
-	flex-basis: auto;
+  opacity: 1;
+  flex-grow: 1;
+  flex-basis: auto;
 }
 
 .side-menu.show-menu .contact-form {
-	flex-grow: 0;
-	flex-basis: 0;
+  flex-grow: 0;
+  flex-basis: 0;
 }
 
 .side-menu .contact-form form {
-	width: 500px;
-    flex-direction: column;
-    display: flex;
-    color: white;
-	overflow: hidden;
-	transition: width 1s linear;
+  width: 500px;
+  flex-direction: column;
+  display: flex;
+  color: white;
+  overflow: hidden;
+  transition: width 1s linear;
 }
 
 .side-menu.show-contact .contact-form form {
-	width: 500px;
+  width: 500px;
 }
 
 .side-menu .contact-form form label {
-    font-size: 20px;
-	margin-bottom: 1rem;
+  font-size: 20px;
+  margin-bottom: 1rem;
 }
-.side-menu .contact-form form input:focus, .side-menu .contact-form form textarea:focus {
-	outline: none;
+.side-menu .contact-form form input:focus,
+.side-menu .contact-form form textarea:focus {
+  outline: none;
 }
 
 /* 	Hacky solution to disable the lightblue-background and black text after autocomplete has been used */
@@ -115,226 +117,248 @@ body.modal {
 .side-menu .contact-form form input:-webkit-autofill:focus,
 .side-menu .contact-form form textarea:-webkit-autofill,
 .side-menu .contact-form form textarea:-webkit-autofill:hover,
-.side-menu .contact-form form textarea:-webkit-autofill:focus
-{
-	transition: background-color 5000s linear 5000s;
-	color: #FFF;
-	-webkit-text-fill-color: #FFF;
+.side-menu .contact-form form textarea:-webkit-autofill:focus {
+  transition: background-color 5000s linear 5000s;
+  color: #fff;
+  -webkit-text-fill-color: #fff;
 }
 
 .side-menu .contact-form form input {
-    margin: 1rem 0;
-    background: transparent;
-    color: #fff;
-    border: none;
-    border-bottom: 1.5px solid rgba(255, 255, 255, 0.5);
-    font-size: 110%;
+  margin: 1rem 0;
+  background: transparent;
+  color: #fff;
+  border: none;
+  border-bottom: 1.5px solid rgba(255, 255, 255, 0.5);
+  font-size: 110%;
 
-	/* Remove ugly default styling on iOS Safari */
-	-webkit-appearance: none;
-	border-radius: 0;
+  /* Remove ugly default styling on iOS Safari */
+  -webkit-appearance: none;
+  border-radius: 0;
 }
 
 .side-menu .contact-form form textarea {
-    margin-bottom: 1rem;
-    color: #fff;
-	border: none;
-    background-color: rgba(255, 255, 255, .2);
-	resize:none;
+  margin-bottom: 1rem;
+  color: #fff;
+  border: none;
+  background-color: rgba(255, 255, 255, 0.2);
+  resize: none;
 }
 
-.side-menu .contact-form form input[type=submit] {
-    margin: 0;
-    color: #fff;
-    background-color: rgba(255, 255, 255, .3);
-    border: none;
-    border-radius: 4px;
-    padding: 1rem;
-    font-weight: 700;
-    font-size: 15px;
-    cursor: pointer;
-	margin-bottom: 6rem;
+.side-menu .contact-form form input[type='submit'] {
+  margin: 0;
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.3);
+  border: none;
+  border-radius: 4px;
+  padding: 1rem;
+  font-weight: 700;
+  font-size: 15px;
+  cursor: pointer;
+  margin-bottom: 6rem;
 }
 
-.side-menu .contact-form form input[type=submit]:hover {
-    background-color: rgba(255, 255, 255, .4);
-    background: linear-gradient(90deg, rgba(255, 255, 255, .3) 0%, rgba(255, 255, 255, .5) 50%, rgba(255, 255, 255, .3) 100%);
+.side-menu .contact-form form input[type='submit']:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.3) 0%,
+    rgba(255, 255, 255, 0.5) 50%,
+    rgba(255, 255, 255, 0.3) 100%
+  );
 }
-
 
 .side-menu .menu-items {
-	flex-grow: 1;
-	display: flex;
-	justify-content: flex-end;
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .side-menu .menu-items .socials {
-	width: 5rem;
-	overflow: hidden;
-	transition: width 0s linear 1s;
+  width: 5rem;
+  overflow: hidden;
+  transition: width 0s linear 1s;
 }
 
 .side-menu.show-menu .menu-items .socials {
-    width: 100%;
-	transition: none;
-
+  width: 100%;
+  transition: none;
 }
 
 .side-menu ul {
-    margin-top: 4rem;
-    padding: 0;
+  margin-top: 4rem;
+  padding: 0;
 }
 
 .side-menu ul li {
-    width: 100%;
-    list-style: none;
-    font-size: 20px;
+  width: 100%;
+  list-style: none;
+  font-size: 20px;
 }
 
 .side-menu ul li a {
-    display: flex;
-	align-items: center;
-	padding: 1rem 0;
+  display: flex;
+  align-items: center;
+  padding: 1rem 0;
 }
 
 .side-menu ul li a:hover {
-    background: rgba(255, 255, 255, .3);
+  background: rgba(255, 255, 255, 0.3);
 }
 
 .side-menu .socials i {
-	flex-shrink: 0;
-    font-size: 35px;
-    width: 5rem;
-	text-align: center;
+  flex-shrink: 0;
+  font-size: 35px;
+  width: 5rem;
+  text-align: center;
 }
 
 .main-content {
-	margin-left: 5rem;
-	display: flex;
-	padding: 4em 6rem;
+  margin-left: 5rem;
+  display: flex;
+  padding: 4em 6rem;
 }
 
 .photo {
-	padding-right: 2rem;
+  padding-right: 2rem;
 }
 
 .photo-wrapper {
-	display: inline-block;
-	border-radius: 100%;
-	border: 3px solid transparent;
-	animation: photo-outline 4s linear forwards;
-
+  display: inline-block;
+  border-radius: 100%;
+  border: 3px solid transparent;
+  animation: photo-outline 4s linear forwards;
 }
 
 .main-content .photo img {
-	border-radius: 100%;
-	border: 3px solid transparent;
-	vertical-align: top;
+  border-radius: 100%;
+  border: 3px solid transparent;
+  vertical-align: top;
 }
 
 /* adds outline to CV photo, after lineanimation has looped around it */
 @keyframes photo-outline {
-	60% {
-		border: 3px solid transparent;	
-	}
+  60% {
+    border: 3px solid transparent;
+  }
 
-	61%, 100% {
-		border: 3px solid #000;
-	}
+  61%,
+  100% {
+    border: 3px solid #000;
+  }
 }
 
-.main-content  h1 {
-    font-size: 5em;
-	font-weight: 700;
+.main-content h1 {
+  font-size: 5em;
+  font-weight: 700;
 }
 
-.main-content  h2 {
-    font-size: 4.5em;
-	font-weight: 600;
-	margin-bottom: 0;
+.main-content h2 {
+  font-size: 4.5em;
+  font-weight: 600;
+  margin-bottom: 0;
 }
 
 .main-content .cv {
-	padding: 0 3rem;
+  padding: 0 3rem;
+}
+
+.main-content .cv {
+  padding: 0 3rem;
 }
 
 .main-content .cv .activity {
-	margin-bottom: 3rem;
+  margin-bottom: 3rem;
 }
 
 .main-content .education .activity {
-	margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
-.main-content .activity h3, .main-content .activity h4 {
-	font-weight: 600;
-	margin-bottom: .5rem;
-	padding-left: .2rem;
+.main-content .activity h3,
+.main-content .activity h4 {
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+  padding-left: 0.2rem;
 }
 
 .main-content .activity h3 {
-	text-transform: uppercase;
-	font-size: 3.5em;
+  text-transform: uppercase;
+  font-size: 3.5em;
 }
 
 .main-content .activity h4 {
-	font-size: 2.5em;
-	margin: 2rem 0 0 0;
+  font-size: 2.5em;
+  margin: 2rem 0 0 0;
 }
 
 .main-content .activity p {
-	margin: 0;
-	font-size: 1.1875em;
-	color: #858585;
+  margin: 0;
+  font-size: 1.1875em;
+  color: #858585;
 }
 
 .descriptive-text p {
-	padding-left: 0.4rem;
+  padding-left: 0.4rem;
 }
 
 .olivia {
-	margin-bottom: 4rem;
+  margin-bottom: 4rem;
 }
 
-.olivia h1, .olivia p {
-	margin: 0;
+.olivia h1,
+.olivia p {
+  margin: 0;
 }
 
 .olivia h1 {
-	white-space: nowrap;
+  white-space: nowrap;
 }
 
 .olivia h1 .thin {
-	font-weight: 100;
+  font-weight: 100;
+}
+
+.skills {
+  width: 60%;
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+.skills span {
+  background-color: #f0f0f0;
+  padding: 0.3rem 0.4rem;
+  margin: 0.3rem;
+  border-radius: 3px;
+  white-space: nowrap;
 }
 
 .about-me {
-	width: 60%;
-	font-size: 24px;
-	font-weight: 400;
-	color: black;
+  width: 60%;
+  font-size: 24px;
+  font-weight: 400;
+  color: black;
 }
 
 .education {
-	padding: 0 3rem;
+  padding: 0 3rem;
 }
 
 .education p {
-	margin-bottom: 1rem;
-	font-size: 20px;
+  margin-bottom: 1rem;
+  font-size: 20px;
 }
 
 .education p .start-date {
-	display: block;
-	color: #999;
-	font-size: 20px;
+  display: block;
+  color: #999;
+  font-size: 20px;
 }
 
-
 .check-icon {
-	font-size: 25px;
-	color: lightgreen;
-	margin-left: 1rem;
+  font-size: 25px;
+  color: lightgreen;
+  margin-left: 1rem;
 }
 
 /*
@@ -342,12 +366,12 @@ svg element containing path element for line effect on load.
 Has negative z-index to place it behind the content 
 */
 svg {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 /* 
@@ -356,25 +380,24 @@ variable --dash-length defines the stroke dash length, is overridden with javasc
 variable --dash-start defines the start positon of the stroke dash, is overridden with javascript 
 */
 svg #path {
-	--dash-length: 4000;
-	--dash-start: 12000;
-	
-	fill: none;
-	stroke: #000;
-	stroke-width: 3px;
-	stroke-dasharray: var(--dash-length);
-	stroke-dashoffset: var(--dash-start);
-	animation: animate-line 4s linear forwards;
-	animation-timing-function: ease-in-out;
+  --dash-length: 4000;
+  --dash-start: 12000;
+
+  fill: none;
+  stroke: #000;
+  stroke-width: 3px;
+  stroke-dasharray: var(--dash-length);
+  stroke-dashoffset: var(--dash-start);
+  animation: animate-line 4s linear forwards;
+  animation-timing-function: ease-in-out;
 }
 
 /* keyframe animation to animate the dash stroke across the screen */
 @keyframes animate-line {
-	from {
-		stroke-dashoffset: var(--dash-start);	
-	}
-	to {
-		stroke-dashoffset: var(--dash-length);
-	}
+  from {
+    stroke-dashoffset: var(--dash-start);
+  }
+  to {
+    stroke-dashoffset: var(--dash-length);
+  }
 }
-
